<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edit_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/edit_website_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            tools:targetApi="o" />

        <Button
            android:id="@+id/button_website"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_website_label"
            android:onClick="openWebsite"/>

        <EditText
            android:id="@+id/edit_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/edit_location_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            tools:targetApi="o" />

        <Button
            android:id="@+id/button_location"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_location_label"
            android:onClick="openLocation"/>

        <EditText
            android:id="@+id/edit_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/edit_share_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            tools:targetApi="o"/>

        <Button
            android:id="@+id/button_share"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_share_label"
            android:onClick="shareText" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>